[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behave-data"
version = "0.1.2"
description = "Data management for Behave — typed tables, diff, dynamic examples, fixtures, secrets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mathias Paulenko" }]
keywords = ["behave", "bdd", "data-tables", "examples", "typing", "diff", "fixtures", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Typing :: Typed",
]
dependencies = [
    "behave>=1.2.6",
    "behave-tables>=1.3.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
excel = ["openpyxl>=3.1"]
pandas = ["pandas>=2.0"]
vault = ["hvac>=2.0"]
aws = ["boto3>=1.34"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/behave-data"
Repository = "https://github.com/MathiasPaulenko/behave-data"
Issues = "https://github.com/MathiasPaulenko/behave-data/issues"
Changelog = "https://github.com/MathiasPaulenko/behave-data/blob/main/CHANGELOG.md"

[project.entry-points."behave_data.loaders"]
csv = "behave_data.loaders.csv:CsvLoader"
json = "behave_data.loaders.json:JsonLoader"
yaml = "behave_data.loaders.yaml:YamlLoader"
excel = "behave_data.loaders.excel:ExcelLoader"

[tool.hatch.build.targets.wheel]
packages = ["behave_data"]

[tool.hatch.build.targets.wheel.force-include]
"behave_data/py.typed" = "behave_data/py.typed"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["behave_data"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["behave_data"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
strict = true
ignore_missing_imports = true
