[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behave-data"
version = "1.0.1"
description = "Data management for Behave — typed tables, diff, dynamic examples, fixtures, secrets"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Mathias Paulenko", email = "mathias.paulenko@gmail.com" }]
keywords = ["behave", "bdd", "data-tables", "examples", "typing", "diff", "fixtures", "testing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Typing :: Typed",
]
dependencies = [
    "behave>=1.2.6",
    "behave-tables>=1.3.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
excel = ["openpyxl>=3.1"]
pandas = ["pandas>=2.0"]
http = ["requests>=2.31"]
sql = ["sqlalchemy>=2.0"]
vault = ["hvac>=2.0"]
aws = ["boto3>=1.34"]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "myst-parser>=3.0",
]
all = [
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "hvac>=2.0",
    "boto3>=1.34",
    "requests>=2.31",
    "sqlalchemy>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/behave-data"
Documentation = "https://mathiaspaulenko.github.io/behave-data"
Repository = "https://github.com/MathiasPaulenko/behave-data"
Issues = "https://github.com/MathiasPaulenko/behave-data/issues"
Changelog = "https://github.com/MathiasPaulenko/behave-data/blob/main/CHANGELOG.md"

[project.entry-points."behave_data.loaders"]
csv = "behave_data.loaders.csv:CsvLoader"
json = "behave_data.loaders.json:JsonLoader"
yaml = "behave_data.loaders.yaml:YamlLoader"
xlsx = "behave_data.loaders.excel:ExcelLoader"
sql = "behave_data.loaders.sql:SqlLoader"
http = "behave_data.loaders.http:HttpLoader"

[tool.hatch.build.targets.wheel]
packages = ["behave_data"]

[tool.hatch.build.targets.wheel.force-include]
"behave_data/py.typed" = "behave_data/py.typed"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["behave_data"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["behave_data"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ["^tests/integration/"]

[tool.deptry]
optional_dependencies_dev_groups = ["dev", "docs"]
